update project links

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2321,6 +2321,10 @@
 
 /* Button */
 
+	.project-btn {
+		margin-top: 10px;
+	}
+
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
